[project]
name = "promptmcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ruff>=0.11.6",
    "click>=8.0.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.21.0",
    "mcp[cli]>=1.6.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "httpx>=0.23.0"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
promptmcp = "promptmcp.main:cli"
